syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package proto;

// The trader service definition.
service trader {
  // Get current balances
  rpc GetBalances (BalancesRequest) returns (BalancesResponse) {}
}

message BalancesRequest {
  bool ignoreSmall = 1;
}

message Balance {
  string symbol = 1;
  float total = 2;
}

message BalancesResponse {
  string message = 1;
}
